--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                     <div class="card-header bg-warning text-center">Date de Contact</div>
                     <div class="card-body text-center">
                       <h5 class="card-title">Numar de telefon: 0752812302</h5>
-                      <h5 class="card-title">Email:<br> lgm@gmail.com</h5>
+                      <h5 class="card-title">Email:<br> staicu.luminita@lgm.ro</h5>
                       <h5 class="card-title"><br>Adresa: <br>Str. Negoiu , nr 30, Sector 3, Bucuresti</h5><a  href="https://www.google.com/maps/search/?api=1&query=strada%20negoiu%2030%20bucharest%20romania"><i class="fas fa-map-marker-alt fa-8x " ></i></a>
                     </div>
                     </div>
