--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, corporis! Quaerat voluptas aut quasi tempore libero quis repellat sunt veritatis, consequuntur rem ab consectetur. Beatae saepe corrupti sed ipsum quo explicabo, aliquid, in doloribus repellat alias iste illum nulla praesentium suscipit, nemo quos placeat itaque dignissimos fuga aut! Dignissimos, ut!</p>
                     </div>
                     <div class="col-md-6">
-                        <img class="img-fluid img-thumbnail rounded-circle float-right" id="first-image" src="photos/creative.png" alt="Creative">
+                        <img class="img-fluid img-thumbnail rounded-pill  float-right" id="first-image" src="photos/creative.png" alt="Creative">
                     </div>
                 </div>
             </div>
@@ -111,8 +111,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Proiectele Noastre</h5>
                       <p class="card-text">
-                        Some quick example text to build on the card title and make up the bulk of the
-                        card's content.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur laborum omnis sequi eligendi a maxime, quo laboriosam laudantium quod quis?
                       </p>
                       <a href="#!" class="btn btn-warning btn-rounded">Afla mai multe</a>
                     </div>
@@ -132,8 +131,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Clientii nostri</h5>
                       <p class="card-text">
-                        Some quick example text to build on the card title and make up the bulk of the
-                        card's content.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis eaque doloribus pariatur nihil quis, sint eius expedita architecto dolorum excepturi?
                       </p>
                       <a href="#!" class="btn btn-warning btn-rounded">Afla mai multe</a>
                     </div>
@@ -153,8 +151,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Cine suntem noi?</h5>
                       <p class="card-text">
-                        Some quick example text to build on the card title and make up the bulk of the
-                        card's content.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam perferendis officia quasi voluptatem ab saepe maiores iste consectetur quia.
                       </p>
                       <a href="#!" class="btn btn-warning btn-rounded">Afla mai multe</a>
                     </div>
