photos+text(just a bit)

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Light&Gabriel Media</title>
+        <title>LightAdvertisingGabriel</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -62,7 +62,7 @@
         <div class="jumbotron mt-5 bg-transparent">
         <div class="row">
             <div class="col-md-6 align-self-center ">
-                <div class="card border border-warning shadow-0 mb-3 ml-5" style="max-width: 18rem;">
+                <div class="card border  mb-3 ml-5" style="max-width: 18rem;">
                     <div class="card-header bg-warning text-center">Date de Contact</div>
                     <div class="card-body text-center">
                       <h5 class="card-title">Numar de telefon: 0752812302</h5>
@@ -98,7 +98,7 @@
             
                 
                     <!-- Submit button -->
-                    <button type="submit" class="btn btn-warning btn-block mb-4">Trimite</button>
+                    <button type="submit" class="btn btn-warning btn-block mb-4 w-50">Trimite</button>
                 </form>
           </div>
         </div>
