--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, corporis! Quaerat voluptas aut quasi tempore libero quis repellat sunt veritatis, consequuntur rem ab consectetur. Beatae saepe corrupti sed ipsum quo explicabo, aliquid, in doloribus repellat alias iste illum nulla praesentium suscipit, nemo quos placeat itaque dignissimos fuga aut! Dignissimos, ut!</p>
                     </div>
                     <div class="col-md-6">
-                        <img class="img-fluid img-thumbnail rounded-pill  float-right" id="first-image" src="photos/creative.png" alt="Creative">
+                        <img class="img-fluid rounded-4 float-right" id="first-image" src="photos/pozaprincipala.png" alt="Creative">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         src="https://mdbootstrap.com/img/new/standard/nature/111.jpg"
                         class="img-fluid"
                       />
-                      <a href="#!">
+                      <a href="proiecte.html">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                       </a>
                     </div>
@@ -113,7 +113,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur laborum omnis sequi eligendi a maxime, quo laboriosam laudantium quod quis?
                       </p>
-                      <a href="#!" class="btn btn-warning btn-rounded">Afla mai multe</a>
+                      <a href="proiecte.html" class="btn btn-warning btn-rounded">Afla mai multe</a>
                     </div>
                   </div>
             </div>
@@ -124,7 +124,7 @@
                         src="https://mdbootstrap.com/img/new/standard/nature/182.jpg"
                         class="img-fluid"
                       />
-                      <a href="#!">
+                      <a href="proiecte.html#clienti">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                       </a>
                     </div>
@@ -133,7 +133,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis eaque doloribus pariatur nihil quis, sint eius expedita architecto dolorum excepturi?
                       </p>
-                      <a href="#!" class="btn btn-warning btn-rounded">Afla mai multe</a>
+                      <a href="proiecte.html#clienti" class="btn btn-warning btn-rounded">Afla mai multe</a>
                     </div>
                   </div>
             </div>
@@ -144,7 +144,7 @@
                         src="https://mdbootstrap.com/img/new/standard/nature/184.jpg"
                         class="img-fluid"
                       />
-                      <a href="#!">
+                      <a href="about.html">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                       </a>
                     </div>
@@ -153,7 +153,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam perferendis officia quasi voluptatem ab saepe maiores iste consectetur quia.
                       </p>
-                      <a href="#!" class="btn btn-warning btn-rounded">Afla mai multe</a>
+                      <a href="about.html" class="btn btn-warning btn-rounded">Afla mai multe</a>
                     </div>
                   </div>
             </div>
@@ -217,6 +217,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
         <script src="scripts/hamburger.js"></script>
         <script src="scripts/slider.js"></script>
+        
         
     </body>
 </html>
