--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="css/general.css">
     </head>
     <body>
-        <div></div>
+        
         <nav class="navbar navbar-expand-lg fixed-top navbar-light">
 
             <!-- Brand -->
@@ -34,7 +34,7 @@
                 <h3 id="logo">Light Advertising Gabriel</h3>
             </a>
     
-            <!-- Toggler/collapsibe Button -->
+            <!-- Toggler/collapsibLe Button -->
             <button class="navbar-toggler first-button" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarToggleExternalContent9" aria-controls="navbarToggleExternalContent9" aria-expanded="false"
             aria-label="Toggle navigation">
             <div class="animated-icon1"><span></span><span></span><span></span></div>
@@ -102,7 +102,7 @@
           </div>
         </div>
         </div>
-        <footer class="text-center text-white" >
+        <footer class="text-center text-white fixed-xl-bottom" >
             <!-- Grid container -->
             <div class="container pt-4">
               <!-- Section: Social media -->
