--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             <div class="container">
                 <h1 class="text-center mt-3">Partenerii Nostri</h1>
                 <section class="logo-carousel slider" data-arrows="true">
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image1.png"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image2.png"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image3.png"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image4.png"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image5.png"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image6.png"></div>
+                    <div class="slide"><img src="photos/LogoaRoma.svg"></div>
+                    <div class="slide"><img class="img-fluid rounded " src="photos/logocareless.svg"></div>
+                    <div class="slide"><img class="img-fluid " src="photos/LogoFashion.svg"></div>
+                    <div class="slide"><img src="photos/logoKeia.svg"></div>
+                    <div class="slide"><img src="photos/logoKaufland.svg"></div>
+                    <div class="slide"><img src="photos/logoLeonidas.svg"></div>
                     <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image7.png"></div>
                     <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image8.png"></div>
               </section>
