--- a/proiecte.html
+++ b/proiecte.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="carousel-item">
                 <img
-                    src="photos/Keia Izvorul Zaganului.jpg"
+                    src="photos/keia.jpg"
                     class="d-block w-100"
                     alt="..."
                 />
@@ -271,7 +271,7 @@
                         <div class="accordion-body text-dark ">
                           Keia - Izvorul Zăganului este o apă oligominerală naturală, extrasă din Aria Protejată Ciucaș, de la aproximativ 1.200 de metri altitudine, unul dintre cele mai înalte puncte de exploatare a apei minerale din România. 
                           <br>
-                          <img class="img-fluid  " src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image1.png">
+                          <img class="img-thumbnail mt-3" src="photos/logoKeia.png">
                         </div>
                       </div>
                     </div>
@@ -298,7 +298,7 @@
                         <div class="accordion-body">
                           Careless Beauty este singurul brand românesc de cosmetice 100% naturale brevetat, care continuă o tradiție seculară în studierea universului plantelor și redescoperirea beneficiilor profunde ale extractelor vegetale pentru sănătatea pielii și păstrarea frumuseții cu adevărat naturale.
                           <br>
-                          <img class="img-fluid  " src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image2.png">
+                          <img class="img-fluid img-thumbnail mt-3  " src="photos/logocareless.png">
                         </div>
                       </div>
                     </div>
