--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <div class="container">
                 <h1 class="text-center mt-3">Partenerii Nostri</h1>
                 <section class="logo-carousel slider" data-arrows="true">
-                    <div class="slide"><img src="photos/LogoaRoma.svg"></div>
+                    <div class="slide"><img src="photos/logoaRoma.svg"></div>
                     <div class="slide"><img class="img-fluid rounded " src="photos/logocareless.svg"></div>
-                    <div class="slide"><img class="img-fluid " src="photos/LogoFashion.svg"></div>
+                    <div class="slide"><img class="img-fluid " src="photos/logoFashion.svg"></div>
                     <div class="slide"><img src="photos/logoKeia.svg"></div>
                     <div class="slide"><img src="photos/logoKaufland.svg"></div>
                     <div class="slide"><img src="photos/logoLeonidas.svg"></div>
