a few more Logos

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                 <h1 class="text-center mt-3">Partenerii Nostri</h1>
                 <section class="logo-carousel slider" data-arrows="true">
                     <div class="slide"><img src="photos/logoaRoma.svg"></div>
-                    <div class="slide"><img class="img-fluid rounded " src="photos/logocareless.svg"></div>
-                    <div class="slide"><img class="img-fluid " src="photos/logoFashion.svg"></div>
+                    <div class="slide"><img  src="photos/logocareless.svg"></div>
+                    <div class="slide"><img  src="photos/logoFashion.svg"></div>
                     <div class="slide"><img src="photos/logoKeia.svg"></div>
                     <div class="slide"><img src="photos/logoKaufland.svg"></div>
                     <div class="slide"><img src="photos/logoLeonidas.svg"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image7.png"></div>
-                    <div class="slide"><img src="https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/image8.png"></div>
+                    <div class="slide"><img src="photos/logoUDC.svg"></div>
+                    <div class="slide"><img src="photos/logoImageSkincare.svg"></div>
               </section>
             </div>
         </div>
